# remote_rc_bt_esp32

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: control.rs  hardware.rs  init.rs  lib.rs  radio.rs
src/control/: commands.rs  instruction.rs
src/hardware/: board.rs  button.rs  config.rs  led.rs  motor.rs
src/radio/: ble.rs  config.rs  service.rs
