[package]
edition = "2021"
name = "remote_rc_bt"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "remote_rc_bt"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "esp32",
    "log-04",
    "unstable",
] }
log = "0.4.27"

bt-hci = { version = "0.2.1", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
    "log",
    "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32", "log-04"] }
esp-println = { version = "0.15.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
    "ble",
    "builtin-scheduler",
    "esp-alloc",
    "esp32",
    "log-04",
] }
static_cell = "2.1.1"
trouble-host = { version = "0.1.0", features = ["gatt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
