[package]
edition = "2021"
name = "remote_rc_bt"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "remote_rc_bt"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "esp32",
    "log-04",
    "unstable",
] }
log = "0.4.27"
embassy-executor = { version = "0.7.0", features = [
    "log",
    "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
    "esp32",
    "panic-handler",
    "println",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32", "log-04"] }
esp-println = { version = "0.15.0", features = ["esp32", "log-04"] }
esp-radio = { version = "0.15.0", features = ["unstable", "ble", "esp32"] }
esp-radio-preempt-baremetal = { version = "0.0.1", features = [
    "log-04",
    "esp32",
] }
# esp-wifi = { version = "0.15.0", features = [
#     "ble",
#     "builtin-scheduler",
#     "esp-alloc",
#     "esp32",
#     "log-04",
# ] }
static_cell = "2.1.1"
trouble-host = { version = "0.2.4", features = ["gatt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[patch.crates-io]
# esp-radio instead of esp-wifi package
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
esp-radio-preempt-baremetal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "a7bd8980ea2aff28d20bc501e86886dc917c9e28" }
# bt-hci==0.4.0
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "d0f893c471d7314841ef8a7213f699da14285b6e" }
