[package]
edition = "2021"
name = "remote_rc_bt"
rust-version = "1.90"
version = "0.1.0"

[[bin]]
name = "remote_rc_bt"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.2.0"
embassy-sync = "0.7.1"
esp-hal = { version = "=1.0.0-rc.0", features = [ "unstable" ] }
log = "0.4.27"
embassy-executor = "0.9.0"
embassy-time = { version = "0.4.0", features = ["log"] }
embassy-futures = "0.1.1"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-preempt = { version = "0.0.1", features = ["log-04"] }
esp-backtrace = { version = "0.17.0", features = [
    "panic-handler",
    "println",
] }
esp-hal-embassy = { version = "0.9.0" }
esp-println = { version = "0.15.0", features = ["log-04"] }
esp-radio = { version = "0.15.0", features = ["unstable", "ble"] }

static_cell = "2"
trouble-host = { version = "0.5.0", features = ["gatt"] }

pwm-pca9685 = { version = "1.0.0" }

embedded-test-linker-script = { version = "0.1.0" }

[dev-dependencies]
embedded-test = { version = "0.7.0" }

[features]
default = ["esp32"]

esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-hal-embassy/esp32", "esp-println/esp32", "esp-radio/esp32", "esp-preempt/esp32", "esp-bootloader-esp-idf/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy/esp32c2", "esp-println/esp32c2", "esp-preempt/esp32c2", "esp-radio/esp32c2", "esp-bootloader-esp-idf/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-preempt/esp32c3", "esp-radio/esp32c3", "esp-bootloader-esp-idf/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6", "esp-preempt/esp32c6", "esp-radio/esp32c6", "esp-bootloader-esp-idf/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy/esp32h2", "esp-println/esp32h2", "esp-preempt/esp32h2", "esp-radio/esp32h2", "esp-bootloader-esp-idf/esp32h2"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3", "esp-preempt/esp32s3", "esp-radio/esp32s3", "esp-bootloader-esp-idf/esp32s3"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[patch.crates-io]
# esp-radio instead of esp-wifi package
esp-radio = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}
esp-preempt = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}
esp-backtrace = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}
esp-hal = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}
esp-bootloader-esp-idf = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}
esp-hal-embassy = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}
esp-alloc = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}
esp-println = {git = "https://github.com/lulf/esp-hal.git", branch = "bt-hci-fix"}

# TODO: Get interested with defmt-test
